Fix more sonar issues
Signed-off-by: Nathan Klick <nathan@swirldslabs.com>